--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -27,3 +27,10 @@ resources:
 - cloud-resources_cceenfsvolume_editor_role.yaml
 - cloud-resources_cceenfsvolume_viewer_role.yaml
 
+# For each CRD, "Admin", "Editor" and "Viewer" roles are scaffolded by
+# default, aiding admins in cluster management. Those roles are
+# not used by the {{ .ProjectName }} itself. You can comment the following lines
+# if you do not want those helpers be installed with your Project.
+- cloud-control_skrstatus_admin_role.yaml
+- cloud-control_skrstatus_editor_role.yaml
+- cloud-control_skrstatus_viewer_role.yaml
