--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -22,4 +22,5 @@ resources:
 - cloud-resources_v1beta1_awsnfsbackupschedule.yaml
 - cloud-control_v1beta1_nuke.yaml
 - cloud-resources_v1beta1_awsnfsvolumerestore.yaml
+- cloud-control_v1beta1_skrstatus.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
