--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -25,6 +25,7 @@ resources:
 - bases/cloud-control.kyma-project.io_nukes.yaml
 - bases/cloud-resources.kyma-project.io_awsnfsvolumerestores.yaml
 - bases/cloud-control.kyma-project.io_skrstatuses.yaml
+- bases/cloud-control.kyma-project.io_redisclusters.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -77,6 +78,7 @@ patches:
 #- path: patches/cainjection_in_cloud-resources_awsnfsbackupschedules.yaml
 #- path: patches/cainjection_in_cloud-control_nukes.yaml
 #- path: patches/cainjection_in_cloud-resources_awsnfsvolumerestores.yaml
+#- path: patches/cainjection_in_cloud-control_redisclusters.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
