--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -24,4 +24,5 @@ resources:
 - cloud-resources_v1beta1_awsnfsvolumerestore.yaml
 - cloud-control_v1beta1_skrstatus.yaml
 - cloud-control_v1beta1_rediscluster.yaml
+- cloud-resources_v1beta1_azurerwxvolumebackup.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
