--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -26,6 +26,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_awsnfsvolumerestores.yaml
 - bases/cloud-control.kyma-project.io_skrstatuses.yaml
 - bases/cloud-control.kyma-project.io_redisclusters.yaml
+- bases/cloud-resources.kyma-project.io_azurerwxvolumebackups.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -79,6 +80,7 @@ patches:
 #- path: patches/cainjection_in_cloud-control_nukes.yaml
 #- path: patches/cainjection_in_cloud-resources_awsnfsvolumerestores.yaml
 #- path: patches/cainjection_in_cloud-control_redisclusters.yaml
+#- path: patches/cainjection_in_cloud-resources_azurerwxvolumebackups.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
