--- a/config/crd/bases/cloud-control.kyma-project.io_redisinstances.yaml
+++ b/config/crd/bases/cloud-control.kyma-project.io_redisinstances.yaml
@@ -132,6 +132,15 @@ spec:
                             - 4
                             - 5
                             type: integer
+                          family:
+                            default: P
+                            enum:
+                            - C
+                            - P
+                            type: string
+                            x-kubernetes-validations:
+                            - message: Family is immutable.
+                              rule: (self == oldSelf)
                         required:
                         - capacity
                         type: object
