--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -27,4 +27,5 @@ resources:
 - cloud-resources_v1beta1_azurerwxvolumebackup.yaml
 - cloud-resources_v1beta1_azurerwxvolumerestore.yaml
 - cloud-resources_v1beta1_azurerwxbackupschedule.yaml
+- cloud-resources_v1beta1_awsrediscluster.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
