--- a/config/samples/cloud-resources_v1beta1_awsrediscluster.yaml
+++ b/config/samples/cloud-resources_v1beta1_awsrediscluster.yaml
@@ -6,4 +6,15 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: awsrediscluster-sample
 spec:
-  # TODO(user): Add fields here
+  # required fields
+  redisTier: "C1"
+  shardCount : 3
+  replicasPerShard: 1
+
+  # optional fields
+  engineVersion: "7.0"
+  autoMinorVersionUpgrade: true
+  parameters:
+    maxmemory-policy: volatile-lru
+    activedefrag: "yes"
+  preferredMaintenanceWindow: sun:23:00-mon:01:30
