--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -11,8 +11,10 @@ jobs:
         include:
           - nukeBackupsGcp: "false"
             nukeBackupsAws: "false"
+            rwxBackupAzure: "false"
           - nukeBackupsGcp: "true"
             nukeBackupsAws: "true"
+            rwxBackupAzure: "true"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -27,6 +29,7 @@ jobs:
         env:
           FF_NUKE_BACKUPS_GCP: ${{ matrix.nukeBackupsGcp }}
           FF_NUKE_BACKUPS_AWS: ${{ matrix.nukeBackupsAws }}
+          FF_RWX_BACKUP_AZURE: ${{ matrix.rwxBackupAzure }}
         run: |
           ./config/sync.sh
           go mod tidy
