--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -30,6 +30,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_azurerwxvolumerestores.yaml
 - bases/cloud-resources.kyma-project.io_azurerwxbackupschedules.yaml
 - bases/cloud-resources.kyma-project.io_awsredisclusters.yaml
+- bases/cloud-control.kyma-project.io_gcpsubnets.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -88,6 +89,7 @@ patches:
 #- path: patches/cainjection_in_cloud-resources_azurerwxvolumerestores.yaml
 #- path: patches/cainjection_in_cloud-resources_azurerwxbackupschedules.yaml
 #- path: patches/cainjection_in_cloud-resources_awsredisclusters.yaml
+#- path: patches/cainjection_in_cloud-control_gcpsubnets.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
