--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -15,6 +15,7 @@ rules:
 - apiGroups:
   - cloud-control.kyma-project.io
   resources:
+  - gcpsubnets
   - ipranges
   - networks
   - nfsinstances
@@ -34,6 +35,7 @@ rules:
 - apiGroups:
   - cloud-control.kyma-project.io
   resources:
+  - gcpsubnets/finalizers
   - ipranges/finalizers
   - networks/finalizers
   - nfsinstances/finalizers
@@ -47,6 +49,7 @@ rules:
 - apiGroups:
   - cloud-control.kyma-project.io
   resources:
+  - gcpsubnets/status
   - ipranges/status
   - networks/status
   - nfsinstances/status
