--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -28,4 +28,5 @@ resources:
 - cloud-resources_v1beta1_azurerwxvolumerestore.yaml
 - cloud-resources_v1beta1_azurerwxbackupschedule.yaml
 - cloud-resources_v1beta1_awsrediscluster.yaml
+- cloud-control_v1beta1_gcpsubnet.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
