--- a/.github/workflows/pr-golang-lint.yml
+++ b/.github/workflows/pr-golang-lint.yml
@@ -17,6 +17,6 @@ jobs:
         with:
           go-version-file: 'go.mod'
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@2e788936b09dd82dc280e845628a40d2ba6b204c # v6.3.1
+        uses: golangci/golangci-lint-action@v7.0.0
         with:
-          version: latest
+          version: v2.0
