refactor(cloud-control): move GCP RedisCluster implementation into GcpRedisCluster CR

--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -20,6 +20,8 @@ resources:
 # default, aiding admins in cluster management. Those roles are
 # not used by the Project itself. You can comment the following lines
 # if you do not want those helpers be installed with your Project.
+- cloud-control_gcprediscluster_editor_role.yaml
+- cloud-control_gcprediscluster_viewer_role.yaml
 - cloud-control_gcpsubnet_editor_role.yaml
 - cloud-control_gcpsubnet_viewer_role.yaml
 - cloud-resources_awsrediscluster_editor_role.yaml
