--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -31,6 +31,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_azurerwxbackupschedules.yaml
 - bases/cloud-resources.kyma-project.io_awsredisclusters.yaml
 - bases/cloud-control.kyma-project.io_gcpsubnets.yaml
+- bases/cloud-control.kyma-project.io_gcpredisclusters.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -90,6 +91,7 @@ patches:
 #- path: patches/cainjection_in_cloud-resources_azurerwxbackupschedules.yaml
 #- path: patches/cainjection_in_cloud-resources_awsredisclusters.yaml
 #- path: patches/cainjection_in_cloud-control_gcpsubnets.yaml
+#- path: patches/cainjection_in_cloud-control_gcpredisclusters.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
