(feat)Azure redis cluster - skr part (#1165)

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -75,6 +75,7 @@ rules:
   - awsredisclusters
   - awsredisinstances
   - awsvpcpeerings
+  - azureredisClusters
   - azureredisinstances
   - azurerwxbackupschedules
   - azurerwxvolumebackups
@@ -107,6 +108,7 @@ rules:
   - awsredisclusters/finalizers
   - awsredisinstances/finalizers
   - awsvpcpeerings/finalizers
+  - azureredisClusters/finalizers
   - azureredisinstances/finalizers
   - azurerwxbackupschedules/finalizers
   - azurerwxvolumebackups/finalizers
@@ -133,6 +135,7 @@ rules:
   - awsredisclusters/status
   - awsredisinstances/status
   - awsvpcpeerings/status
+  - azureredisClusters/status
   - azureredisinstances/status
   - azurerwxbackupschedules/status
   - azurerwxvolumebackups/status
