--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -32,6 +32,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_awsredisclusters.yaml
 - bases/cloud-control.kyma-project.io_gcpsubnets.yaml
 - bases/cloud-control.kyma-project.io_gcpredisclusters.yaml
+- bases/cloud-resources.kyma-project.io_gcpsubnets.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -92,6 +93,7 @@ patches:
 #- path: patches/cainjection_in_cloud-resources_awsredisclusters.yaml
 #- path: patches/cainjection_in_cloud-control_gcpsubnets.yaml
 #- path: patches/cainjection_in_cloud-control_gcpredisclusters.yaml
+#- path: patches/cainjection_in_cloud-resources_gcpsubnets.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
