--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -30,4 +30,5 @@ resources:
 - cloud-resources_v1beta1_awsrediscluster.yaml
 - cloud-control_v1beta1_gcpsubnet.yaml
 - cloud-control_v1beta1_gcprediscluster.yaml
+- cloud-resources_v1beta1_gcpsubnet.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
