--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -33,6 +33,7 @@ resources:
 - bases/cloud-control.kyma-project.io_gcpsubnets.yaml
 - bases/cloud-control.kyma-project.io_gcpredisclusters.yaml
 - bases/cloud-resources.kyma-project.io_gcpsubnets.yaml
+- bases/cloud-resources.kyma-project.io_gcpredisclusters.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -94,6 +95,7 @@ patches:
 #- path: patches/cainjection_in_cloud-control_gcpsubnets.yaml
 #- path: patches/cainjection_in_cloud-control_gcpredisclusters.yaml
 #- path: patches/cainjection_in_cloud-resources_gcpsubnets.yaml
+#- path: patches/cainjection_in_cloud-resources_gcpredisclusters.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
