--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -31,4 +31,5 @@ resources:
 - cloud-control_v1beta1_gcpsubnet.yaml
 - cloud-control_v1beta1_gcprediscluster.yaml
 - cloud-resources_v1beta1_gcpsubnet.yaml
+- cloud-resources_v1beta1_gcprediscluster.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
