chore: add samples

--- a/config/samples/cloud-resources_v1beta1_gcpsubnet.yaml
+++ b/config/samples/cloud-resources_v1beta1_gcpsubnet.yaml
@@ -6,4 +6,4 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: gcpsubnet-sample
 spec:
-  # TODO(user): Add fields here
+  cidr: '10.250.12.0/22'
