--- a/config/samples/cloud-resources_v1beta1_gcprediscluster.yaml
+++ b/config/samples/cloud-resources_v1beta1_gcprediscluster.yaml
@@ -6,4 +6,11 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: gcprediscluster-sample
 spec:
-  # TODO(user): Add fields here
+  subnet:
+    name: your-gcpsubnet
+  redisTier: C1
+  shardCount: 2
+  replicasPerShard: 1
+  redisConfigs:
+    maxmemory-policy: volatile-lru
+    activedefrag: "yes"
