fix(AzureRwxBackup): PV Reconciler to delete the fileshares with backups

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -181,3 +181,17 @@ rules:
   - kymas/status
   verbs:
   - get
+- apiGroups:
+  - v1
+  resources:
+  - persistentvolumes
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - v1
+  resources:
+  - persistentvolumes/status
+  verbs:
+  - get
