--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -32,4 +32,5 @@ resources:
 - cloud-control_v1beta1_gcprediscluster.yaml
 - cloud-resources_v1beta1_gcpsubnet.yaml
 - cloud-resources_v1beta1_gcprediscluster.yaml
+- cloud-control_v1beta1_azurevnetlink.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
