--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -35,6 +35,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_gcpsubnets.yaml
 - bases/cloud-resources.kyma-project.io_gcpredisclusters.yaml
 - bases/cloud-control.kyma-project.io_azurevnetlinks.yaml
+- bases/cloud-resources.kyma-project.io_azurevnetlinks.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -96,6 +97,7 @@ patches:
 #- path: patches/cainjection_in_cloud-control_gcpsubnets.yaml
 #- path: patches/cainjection_in_cloud-control_gcpredisclusters.yaml
 #- path: patches/cainjection_in_cloud-resources_gcpsubnets.yaml
+#- path: patches/cainjection_in_cloud-resources_azurevnetlinks.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
