feat(AzureVpcDnsLink): rename API

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -35,7 +35,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_gcpsubnets.yaml
 - bases/cloud-resources.kyma-project.io_gcpredisclusters.yaml
 - bases/cloud-control.kyma-project.io_azurevnetlinks.yaml
-- bases/cloud-resources.kyma-project.io_azurevnetlinks.yaml
+- bases/cloud-resources.kyma-project.io_azurevpcdnslinks.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
