--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -15,6 +15,7 @@ rules:
 - apiGroups:
   - cloud-control.kyma-project.io
   resources:
+  - azurevnetlinks
   - gcpredisclusters
   - gcpsubnets
   - ipranges
@@ -36,6 +37,7 @@ rules:
 - apiGroups:
   - cloud-control.kyma-project.io
   resources:
+  - azurevnetlinks/finalizers
   - gcpredisclusters/finalizers
   - gcpsubnets/finalizers
   - ipranges/finalizers
@@ -51,6 +53,7 @@ rules:
 - apiGroups:
   - cloud-control.kyma-project.io
   resources:
+  - azurevnetlinks/status
   - gcpredisclusters/status
   - gcpsubnets/status
   - ipranges/status
@@ -80,6 +83,7 @@ rules:
   - azurerwxbackupschedules
   - azurerwxvolumebackups
   - azurerwxvolumerestores
+  - azurevpcdnslinks
   - azurevpcpeerings
   - cceenfsvolumes
   - cloudresources
@@ -115,6 +119,7 @@ rules:
   - azurerwxbackupschedules/finalizers
   - azurerwxvolumebackups/finalizers
   - azurerwxvolumerestores/finalizers
+  - azurevpcdnslinks/finalizers
   - azurevpcpeerings/finalizers
   - cceenfsvolumes/finalizers
   - cloudresources/finalizers
@@ -144,6 +149,7 @@ rules:
   - azurerwxbackupschedules/status
   - azurerwxvolumebackups/status
   - azurerwxvolumerestores/status
+  - azurevpcdnslinks/status
   - azurevpcpeerings/status
   - cceenfsvolumes/status
   - cloudresources/status
