--- a/sec-scanners-config.yaml
+++ b/sec-scanners-config.yaml
@@ -1,5 +1,6 @@
 module-name: cloud-manager
 kind: kyma
+rc-tag: 1.3.0
 bdba:
   - europe-docker.pkg.dev/kyma-project/prod/cloud-manager:main
   - europe-docker.pkg.dev/kyma-project/prod/cloud-manager:1.2.5
