--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -49,6 +49,12 @@ resources:
 # default, aiding admins in cluster management. Those roles are
 # not used by the {{ .ProjectName }} itself. You can comment the following lines
 # if you do not want those helpers be installed with your Project.
+- cloud-control_subscription_admin_role.yaml
+- cloud-control_subscription_editor_role.yaml
+- cloud-control_subscription_viewer_role.yaml
+- cloud-control_vpcnetwork_admin_role.yaml
+- cloud-control_vpcnetwork_editor_role.yaml
+- cloud-control_vpcnetwork_viewer_role.yaml
 - cloud-control_skrstatus_admin_role.yaml
 - cloud-control_skrstatus_editor_role.yaml
 - cloud-control_skrstatus_viewer_role.yaml
