chore: fix rbac

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -25,6 +25,7 @@ rules:
   - redisclusters
   - redisinstances
   - scopes
+  - skrstatuses
   - subscriptions
   - vpcnetworks
   - vpcpeerings
@@ -49,6 +50,7 @@ rules:
   - redisclusters/finalizers
   - redisinstances/finalizers
   - scopes/finalizers
+  - skrstatuses/finalizers
   - subscriptions/finalizers
   - vpcnetworks/finalizers
   - vpcpeerings/finalizers
@@ -67,6 +69,7 @@ rules:
   - redisclusters/status
   - redisinstances/status
   - scopes/status
+  - skrstatuses/status
   - subscriptions/status
   - vpcnetworks/status
   - vpcpeerings/status
@@ -172,6 +175,28 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - infrastructuremanager.kyma-project.io
+  resources:
+  - gardenerclusters
+  verbs:
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - infrastructuremanager.kyma-project.io
+  resources:
+  - gardenerclusters/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - infrastructuremanager.kyma-project.io
+  resources:
+  - gardenerclusters/status
+  verbs:
+  - get
 - apiGroups:
   - operator.kyma-project.io
   resources:
