feat(AzureVpcPeering): update workflow matrix

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -19,10 +19,12 @@ jobs:
             nukeBackupsAws: "false"
             nukeBackupsAzure: "false"
             nfs41Gcp: "false"
+            vpcPeeringSync: "false"
           - nukeBackupsGcp: "true"
             nukeBackupsAws: "true"
             nukeBackupsAzure: "true"
             nfs41Gcp: "true"
+            vpcPeeringSync: "true"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -39,6 +41,7 @@ jobs:
           FF_NUKE_BACKUPS_AWS: ${{ matrix.nukeBackupsAws }}
           FF_NUKE_BACKUPS_AZURE: ${{ matrix.nukeBackupsAzure }}
           FF_NFS41_GCP: ${{ matrix.nfs41Gcp }}
+          FF_VPC_PEERING_SYNC: ${{ matrix.vpcPeeringSync }}
         run: |
           ./config/sync.sh
           go mod tidy
