--- a/e2e-config-example.yaml
+++ b/e2e-config-example.yaml
@@ -26,3 +26,9 @@ oidcIssuerUrl: https://oidc.example.com
 # shoot admins
 administrators:
   - john.smith@example.com
+
+cloudProfiles:
+  aws: aws
+  azure: az
+  gcp: gcp
+  openstack: converged-cloud-kyma
