chore: rename cloudresources module cr to default

--- a/config/samples/cloud-resources_v1beta1_cloudresources.yaml
+++ b/config/samples/cloud-resources_v1beta1_cloudresources.yaml
@@ -1,5 +1,5 @@
 apiVersion: cloud-resources.kyma-project.io/v1beta1
 kind: CloudResources
 metadata:
-  name: cloudresources-sample
+  name: default
 spec: {}
