chore: fix stale workflow permissions

--- a/.github/workflows/stale.yaml
+++ b/.github/workflows/stale.yaml
@@ -5,6 +5,11 @@ on:
     - cron: '0 0 * * *'  # Runs daily at midnight
   workflow_dispatch: # Allows manual triggering of the workflow
 
+permissions:
+  issues: write
+  pull-requests: write
+  contents: write
+
 jobs:
   stale:
     runs-on: ubuntu-latest
