chore: fix stale workflow permissions

--- a/.github/workflows/stale.yaml
+++ b/.github/workflows/stale.yaml
@@ -6,6 +6,7 @@ on:
   workflow_dispatch: # Allows manual triggering of the workflow
 
 permissions:
+  actions: write
   issues: write
   pull-requests: write
   contents: write
