--- a/.github/workflows/build-image-pr.yaml
+++ b/.github/workflows/build-image-pr.yaml
@@ -3,6 +3,9 @@ name: Cloud-Manager Build Image PR
 on:
   pull_request_target:
     types: [opened, synchronize, reopened, ready_for_review]
+    paths-ignore:
+      - .github/workflows/stale.yaml
+      - docs/**
 
 permissions:
   id-token: write # This is required for requesting the JWT token
