moved create release shell scripts to tools/scripts/release dir

--- a/.github/workflows/auto-version-bump.yaml
+++ b/.github/workflows/auto-version-bump.yaml
@@ -9,38 +9,39 @@ on:
 
 jobs:
   bump-version:
-      name: Bump version
-      runs-on: ubuntu-latest
-      env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-        RELEASE_TAG: ${{github.event.inputs.VERSION}}
-        REPOSITORY: ${{github.repository}}
-      
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
-          with:
-            fetch-depth: 0
-        
-        - name: Generate sec-scanners-config
-          run: |
-            echo "Creating sec-scanners-config.yaml"
-            ./.github/workflows/scripts/render-sec-scanners-config.sh ${RELEASE_TAG}
-        
-        - name: Check if generated sec-scanners-config differs and commit
-          run: |
-            if [ -z "$(git status --porcelain)" ]; then
-               echo "No changes found"
-            else
-              echo "Changes found. Commiting to repo"
-              echo "bumped sec-scanners-config.yaml to ${RELEASE_TAG}"
-              git config --global user.email "test@test.com"
-              git config --global user.name "Test Test"
-              git add ./sec-scanners-config.yaml
-              git commit -m "bumped sec-scanners-config.yaml to ${RELEASE_TAG}"
-              git push
-            fi
-        
+    name: Bump version
+    runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      RELEASE_TAG: ${{github.event.inputs.VERSION}}
+      REPOSITORY: ${{github.repository}}
 
-            
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
+      - name: Generate sec-scanners-config
+        run: |
+          echo "Creating sec-scanners-config.yaml"
+          ./tools/scripts/release/render-sec-scanners-config.sh ${RELEASE_TAG}
+
+      - name: Generate sec-scanners-config-release
+        run: |
+          echo "Creating sec-scanners-config-release.yaml"
+          ./tools/scripts/release/render-sec-scanners-config-release.sh ${RELEASE_TAG}
+
+      - name: Check if generated sec-scanners-config differs and commit
+        run: |
+          if [ -z "$(git status --porcelain)" ]; then
+             echo "No changes found"
+          else
+            echo "Changes found. Commiting to repo"
+            echo "bumped sec-scanners-config.yaml to ${RELEASE_TAG}"
+            git config --global user.email "test@test.com"
+            git config --global user.name "Test Test"
+            git add ./sec-scanners-config.yaml
+            git commit -m "bumped sec-scanners-config.yaml to ${RELEASE_TAG}"
+            git push
+          fi
