--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -7,9 +7,7 @@ on:
         default: ""
         required: true
 
-
 jobs:
-
   create-draft:
     name: Create draft
     runs-on: ubuntu-latest
@@ -23,26 +21,26 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
+
       - name: Create changelog
-        run: ./.github/workflows/scripts/create_changelog.sh $REPOSITORY $RELEASE_TAG
+        run: ./tools/scripts/release/create_changelog.sh $REPOSITORY $RELEASE_TAG
 
       - name: Create draft release
         id: create-draft
         run: |
-          RELEASE_ID=$(./.github/workflows/scripts/create_draft_release.sh $REPOSITORY $RELEASE_TAG)
+          RELEASE_ID=$(./tools/scripts/release/create_draft_release.sh $REPOSITORY $RELEASE_TAG)
           echo "release_id=$RELEASE_ID" >> $GITHUB_OUTPUT
 
       - name: Get manifest and example
         run: |
           MANIFEST_FILEPATH=./config/crd/bases/cloud-resources.kyma-project.io_cloudresources.yaml
           EXAMPLE_FILEPATH=./config/samples/cloud-resources_v1beta1_cloudresources.yaml
-          ./.github/workflows/scripts/upload_manifests.sh $REPOSITORY $MANIFEST_FILEPATH $EXAMPLE_FILEPATH ${{steps.create-draft.outputs.release_id}}
-      
+          ./tools/scripts/upload_manifests.sh $REPOSITORY $MANIFEST_FILEPATH $EXAMPLE_FILEPATH ${{steps.create-draft.outputs.release_id}}
+
       - name: Add lightweight tag
         run: |
           git tag $RELEASE_TAG
           git push origin $RELEASE_TAG
-    
+
     outputs:
       release_id: ${{steps.create-draft.outputs.release_id}}
