--- a/config/crd/gardener/core.gardener.cloud_shoots.yaml
+++ b/config/crd/gardener/core.gardener.cloud_shoots.yaml
@@ -2414,6 +2414,8 @@ spec:
                   The credentials inside the provider secret will be used to create the shoot in the respective account.
                   The field is mutually exclusive with CredentialsBindingName.
                   This field is immutable.
+
+                  Deprecated: Use CredentialsBindingName instead. See https://github.com/gardener/gardener/blob/master/docs/usage/shoot-operations/secretbinding-to-credentialsbinding-migration.md for migration instructions.
                 type: string
               seedName:
                 description: SeedName is the name of the seed cluster that runs the
@@ -2743,6 +2745,15 @@ spec:
                         description: ETCDEncryptionKey contains information about
                           the ETCD encryption key credential rotation.
                         properties:
+                          autoCompleteAfterPrepared:
+                            description: |-
+                              AutoCompleteAfterPrepared indicates whether the current ETCD encryption key rotation should be auto completed after the preparation phase has finished.
+                              Such rotation can be triggered by the `rotate-etcd-encryption-key` annotation.
+                              This field is needed while we support two types of key rotations: two-operation and single operation rotation.
+
+                              Deprecated: This field will be removed in a future release. The field will be no longer needed with
+                              the removal `rotate-etcd-encryption-key-start` & `rotate-etcd-encryption-key-complete` annotations.
+                            type: boolean
                           lastCompletionTime:
                             description: |-
                               LastCompletionTime is the most recent time when the ETCD encryption key credential rotation was successfully
